CustomObjects/objects/invoiceit_s__Gateway__c.object
<CustomObject>
    <customHelpPage>invoiceit_s__support</customHelpPage>
    <description>Configuration object. The administrator should create one Account for the appropriate Payment Gateway.</description>
    <fields>
        <fullName>invoiceit_s__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Algorithm__c</fullName>
        <description>Algorithm for generating HMAC key</description>
        <inlineHelpText>Algorithm for generating HMAC key</inlineHelpText>
        <label>Algorithm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Email_Customer__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If selected purchase confirmation email is sent.
This is only used for Paypal &amp; Authorize.Net</inlineHelpText>
        <label>Email Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Exact_ID_Security_Key__c</fullName>
        <description>Required for first data and Authorize.net CIM Payment Gateway
 &apos;Js_security_key&apos;  - In Payeezy, js_security_key required to create Payeezy / Transarmor tokens</description>
        <inlineHelpText>Required for first data and Authorize.net CIM Payment Gateway</inlineHelpText>
        <label>Exact ID Security Key</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Exact_ID__c</fullName>
        <description>Exact ID - also known as the Gateway ID, This is used for FirstData and Authorize.net CIM</description>
        <inlineHelpText>Exact ID - also known as the Gateway ID, This is used for FirstData and Authorize.net CIM</inlineHelpText>
        <label>Exact ID</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Gateway_Type__c</fullName>
        <label>Gateway Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorize.net</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>WireCard</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>FirstData</fullName>
                </value>
                <value>
                    <fullName>Authorize.net CIM</fullName>
                </value>
                <value>
                    <fullName>Stripe</fullName>
                </value>
                <value>
                    <fullName>SagePay</fullName>
                </value>
                <value>
                    <fullName>Eway</fullName>
                </value>
                <value>
                    <fullName>BrainTree</fullName>
                </value>
                <value>
                    <fullName>CyberSource</fullName>
                </value>
                <value>
                    <fullName>CyberSource_CC_Token</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Merchant_ID__c</fullName>
        <description>Also know as:
&quot;API Login&quot; on Authorize.net
&quot;Merchant Login&quot; on PayPal(Pay Flow Pro)
Apikey -  In Payeezy, this is used to identify the app</description>
        <inlineHelpText>Also know as:
&quot;API Login&quot; on Authorize.net
&quot;Merchant Login&quot; on PayPal(Pay Flow Pro)</inlineHelpText>
        <label>Merchant ID</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Merchant_Reference__c</fullName>
        <description>Not used by Authorize.net
&quot;Partner&quot; in Paypal(Payflow)
 &apos;Content-type&apos; - In Payeezy, this is used to identify the API request format. content type the payload requires</description>
        <inlineHelpText>Not used by Authorize.net
&quot;Partner&quot; in Paypal(Payflow)</inlineHelpText>
        <label>Merchant Reference</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Merchant_Seal_User_Id__c</fullName>
        <description>Not used by Paypal and Wirecard
&quot;Merchant Seal&quot; in Authorize.net
&apos;Ta_token&apos;  - In Payeezy, this is used to identify the merchant</description>
        <inlineHelpText>Not used by Paypal and Wirecard
&quot;Merchant Seal&quot; in Authorize.net</inlineHelpText>
        <label>Merchant Seal User Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Security_Key__c</fullName>
        <description>Also known as:
&quot;Transaction Key&quot; on Authorize.net
&quot;Password&quot; on PayPal(Payflow Pro)
&quot;Secret Key&quot; on Stripe
- &apos;API Secret&apos; - In Payeezy, this is used to identify the app</description>
        <inlineHelpText>Also known as:
&quot;Transaction Key&quot; on Authorize.net
&quot;Password&quot; on PayPal(Payflow Pro)
&quot;Secret Key&quot; on Stripe</inlineHelpText>
        <label>Merchant Security Key</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Test_Mode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Test Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Token__c</fullName>
        <description>This is the Transarmor Token for Payeezy gateway</description>
        <inlineHelpText>This is the Transarmor Token for Payeezy gateway</inlineHelpText>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Transaction_Security_Key__c</fullName>
        <description>Transaction Security Key used by CyberSource
&apos;Authorization&apos; - In Payeezy, HMAC of payload signed using api secret</description>
        <inlineHelpText>Transaction Security Key used by CyberSource</inlineHelpText>
        <label>Transaction Security Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Payment Gateway</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <columns>NAME</columns>
        <columns>invoiceit_s__Gateway_Type__c</columns>
        <columns>invoiceit_s__Active__c</columns>
        <columns>invoiceit_s__Default__c</columns>
        <columns>invoiceit_s__Test_Mode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Payment Gateways</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Payment Gateway Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Gateways</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>invoiceit_s__Active_payment_methods_can_be_default</fullName>
        <active>true</active>
        <description>Only active payment methods can be default</description>
        <errorConditionFormula>invoiceit_s__Default__c &amp;&amp; invoiceit_s__Active__c = false</errorConditionFormula>
        <errorDisplayField>invoiceit_s__Active__c</errorDisplayField>
        <errorMessage>Only active payment methods can be default</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Exact_ID_And_Exact_ID_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR(ISPICKVAL(invoiceit_s__Gateway_Type__c, &apos;FirstData&apos;), ISPICKVAL(invoiceit_s__Gateway_Type__c, &apos;Authorize.net CIM&apos;)) ,OR(invoiceit_s__Exact_ID__c == null, invoiceit_s__Exact_ID_Security_Key__c == null),false)</errorConditionFormula>
        <errorMessage>Exact ID &amp; Exact ID Security Key is required for FirstData or Authorize.net CIM</errorMessage>
    </validationRules>
</CustomObject>